--- a/main.css
+++ b/main.css
@@ -68,14 +68,14 @@ body {
 	height: 85px;
 	margin:0px;
 	padding:0px;
-	position: absolute;
+	position: relative;
 	background-color:#000;	
 }
 header {
 	width:690px;
 	height: 60px;
 	top: 25px;
-	position: absolute;
+	position: relative;
 }
 #logo {
 	margin-left: 20px;
@@ -95,31 +95,33 @@ header {
 }
 #sub_container {
 	width: 650px;
-	height:1000px;
-	top: 210px;
 	margin-left:auto;
 	margin-right:auto;
+	/*padding-top: 50px;*/
 	background-color:#fff;	
 	-moz-box-shadow: 0 0 300px 40px #888;
 	-webkit-box-shadow: 0 0 300px 40px #888;
 	box-shadow: 0 0 300px 40px #000;
-	z-index: 100;
+/*	z-index: 100;*/
 }
 nav {
 	width: 650px;
-	height: 55px;
-	margin-top: 65px;
-	padding-bottom: 318px;
 	background-color: #2b2b2b;
-	z-index:1000000;	
+	margin: 0 auto 0 auto;
+}
+
+nav ul{
+	display: inline-block;
+	width: 560px;
+	margin-left:40px;
 }
 nav ul li {
-	float:right;
+	
 	color: #DEF2F3;
-	display: inline;
+	display: inline-block;
 	list-style: none;
-	text-align: right;
 	font: 300 18px Lato, Arial, Helvetica, sans-serif;
+	margin: 5px 30px 5px 30px;
 }
 #left_slider_wrap {
 	top:246px;
@@ -133,19 +135,18 @@ nav ul li {
 	position:absolute;
 	z-index:-10px;
 }
-#slider {
+/*#slider {
 	width: 690px;
 	height: 324px;
 	top: 130px;
 	position: absolute;
 	z-index: 1000;
 	background: url(imgs/bridge_color.jpg) no-repeat center center;
-	/*background: url(imgs/bridge_bw.jpg) center center;*/
-}
+	/*background: url(imgs/bridge_bw.jpg) center center;
+}*/
 #sub_header {
 	width: 100%;
-	height: 70px;/*
-	margin-top: 200px;*/
+	margin: 0 0 100px 0;
 	padding-top: 15px;
 	background-color: #f3f2f2;
 	-moz-box-shadow: 0 2px 10px #888;
@@ -157,31 +158,39 @@ nav ul li {
 	text-align: center;
 	vertical-align: middle;
 }
-#
+
 #content {
 	width: 100%;
 	height: 500px;
-	background-color: #fff;	
+	background-color: #fff;
+	padding-top: 50px;
 }
 #left_twitter_wrap {
 	top:554px;
-	position:absolute;
+	margin-left: -20px;
+	position: absolute;
 	z-index:-10px;
 }
 #tweet_head {	
 	top: 572px;
 	position:absolute;
-	z-index:1000;
+	z-index:1000;	
+	margin-left: -20px;
 }
 #tweet_txt {
 	font: lighter 27px Steelfish, Arial, Helvetica, sans-serif;	
 	color: #2b2b2b;
 	top: 575px;
 	margin-top: 1px;
-	margin-left: 25px;
 	position:absolute;
 	z-index:1000;
+	
 }
+
+#tweet_box{
+	padding-left: 25px;
+}
+
 #map_box {
 	float: right;
 	width: 324px;
@@ -189,6 +198,7 @@ nav ul li {
 	background: url(imgs/subtle_stripes.png) repeat;
 	margin-top: 40px;
 	margin-right: 15px;
+	
 	border-radius: 10px;
 	-moz-box-shadow: 0 0 5px #888;
 	-webkit-box-shadow: 0 0 5px#888;
@@ -202,17 +212,20 @@ nav ul li {
 	margin-right: auto;
 }
 
+#sub_footer{
+	width:100%;
+	height: 85px;
+	margin:0px;
+	padding:0px;
+	position: relative;
+	background-color:#000;	
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+footer{
+	width:100%;
+	height: 85px;
+	margin:0px;
+	padding:0px;
+	position: relative;
+	background-color:#2b2b2b;	
+}
