--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 /* CSS Document */
 
+html, body {
+	height: 100%;
+	}
+
 body {
 	padding:0;
 	margin:0;
@@ -17,15 +21,15 @@ body {
 	border-bottom: 1px solid #000;
 }
 #container {
-	width: 750px;
-	height: 1000px;/*
-	background-color:#CCC;*/
+	width: 700px;
+	min-height: 100%;
+	background-color:#fff;
 	margin-left: auto;
 	margin-right:auto;
 		
 }
 header {
-	width: 680px;
+	width: 700px;
 	height: 31px;
 	padding-top: 9px;
 	margin-left: auto;
@@ -40,18 +44,63 @@ header {
 	margin-bottom:auto;	
 }
 nav {
-	float:right;
-	width:100px;
+
 	height:22px;
-	background-color:#C96;	
+	float: right;
+	z-index: 10 !important;	
 }
-#slider {
-	width: 700px;
-	height: 300px;
-	background-color:#99C;
-	margin-left: auto;
-	margin-right:auto;	
+
+
+#sddm
+{	margin: 0;
+	padding: 0;
 }
+
+#sddm li
+{	margin: 0;
+	padding: 0;
+	list-style: none;
+	float: left;
+	font: bold 11px arial}
+
+#sddm li a
+{	display: block;
+	margin: 0 1px 0 0;
+	padding: 4px 10px;
+	width: 60px;
+	color: #FFF;
+	text-align: center;
+	text-decoration: none;
+	z-index: 10 !important;	
+}
+
+#sddm li a:hover
+{	background: #49A3FF}
+
+#sddm div
+{	position: absolute;
+	visibility: hidden;
+	margin: 0;
+	padding: 0;
+	border: 1px solid #5970B2}
+
+	#sddm div a
+	{	position: relative;
+		display: block;
+		margin: 0;
+		padding: 5px 10px;
+		width: auto;
+		white-space: nowrap;
+		text-align: left;
+		text-decoration: none;
+		background: #EAEBD8;
+		color: #2875DE;
+		font: 11px arial}
+
+	#sddm div a:hover
+	{	background: #49A3FF;
+		color: #FFF}
+
 #banner {
 	width: 700px;
 	height: 80px;
@@ -69,25 +118,40 @@ nav {
 	text-align: center;
 	vertical-align: middle;	
 }
+
+
 #content {
 	width: 700px;
 	height: 100%;
-	background-color:#f3f2f2;
 	margin-left: auto;
-	margin-right:auto;		
+	margin-right:auto;	
+	overflow:auto;
+	padding-bottom: 230px;	
 }
-.left_col {
-	background-color:#0C3;		
+
+.three_col{
+	float:left;
+	width: 193px;
+	height: 300px;
+	margin: 50px 20px 50px 20px;
+	background:#999;
+}
+
+#left_col {
 	float: left;
-	width: 310px;
-	margin: 25px 0px 15px 15px;
+	margin: 25px 20px 75px 15px;
 	padding: 5px;
 }
-.right_col {
+
+.twitter-timeline{
+	width: 300px;
+}
+
+#right_col {
 	float: left;
-	width: 310px;
+	width: 300px;
 	background: url(imgs/subtle_stripes.png) repeat;
-	margin: 25px 15px 15px;
+	margin: 25px 15px 75px;
 	border-radius: 10px;
 	-moz-box-shadow: 0 0 5px #888;
 	-webkit-box-shadow: 0 0 5px#888;
@@ -95,12 +159,35 @@ nav {
 	padding:10px;
 }
 #right_map {
-	margin-left:12px;	
+	margin-left:12px;
+	width: 275px;
 }
 
+/*Opera Fix*/
+body:before {/* thanks to Maleika (Kohoutec)*/
+content:"";
+height:100%;
+float:left;
+width:0;
+margin-top:-32767px;/* thank you Erik J - negate effect of float*/
+}
 
+#footer {
+	border-top: 1px solid #000;
+	position: relative;
+	margin-top: -230px; /* negative value of footer height */
+	height: 180px;
+	clear:both;
+	background: #333;
+}
 
-
+#copyright{
+	position:relative;
+	height: 50px;
+	margin:0;
+	clear:both;
+	background: #666;
+}
 
 
 
