--- a/main.css
+++ b/main.css
@@ -8,7 +8,9 @@ html, body {
 body {
 	padding:0;
 	margin:0;
-	background: url(imgs/dark_wood.png) repeat;	
+	background: url(imgs/dark_wood.png) repeat;
+	font-family:Verdana, Geneva, sans-serif;
+	font-size: 11px;
 }
 
 #bk_header {
@@ -104,14 +106,14 @@ nav {
 		color: #FFF}
 
 #banner {
-	width: 700px;
 	height: 80px;
+	font-family:Georgia, "Times New Roman", Times, serif;
+	font-size:18px;
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 17px;
+	padding: 17px 10px 17px 10px;
 	background: url(imgs/paper_fibers.png) repeat;
 	border-bottom: 1px solid #ccc;
-	
 	background-color: #f3f2f2;
 	-moz-box-shadow: 0 2px 10px #888;
 	-webkit-box-shadow: 0 2px 10px #888;
@@ -129,20 +131,25 @@ nav {
 	margin-left: auto;
 	margin-right:auto;	
 	overflow:auto;
-	padding-bottom: 230px;	
+	padding-bottom: 270px;	
 }
 
 .three_col{
 	float:left;
-	width: 193px;
-	height: 300px;
-	margin: 50px 20px 50px 20px;
-	background:#999;
+	width: 200px;
+	margin: 50px 5px 50px 5px;
+	padding: 10px;overflow:hidden;
+}
+
+.three_col img{
+	margin-bottom: 20px;
+	height: 130px;
+	
 }
 
 #left_col {
 	float: left;
-	margin: 25px 20px 75px 15px;
+	margin: 25px 10px 75px 15px;
 	padding: 5px;
 }
 
@@ -178,7 +185,7 @@ margin-top:-32767px;/* thank you Erik J - negate effect of float*/
 #footer {
 	border-top: 1px solid #000;
 	position: relative;
-	margin-top: -230px; /* negative value of footer height */
+	margin-top: -270px; /* negative value of footer height */
 	height: 180px;
 	clear:both;
 	background: #333;
@@ -234,13 +241,33 @@ margin-top:-32767px;/* thank you Erik J - negate effect of float*/
 #copyright{
 	border-top: 1px solid #000;
 	position:relative;
-	height: 50px;
+	height: 90px;
 	margin:0;
 	clear:both;
 	background: #666;
 }
 
+.copyright_content{
+	font-size:8px;
+	width: 700px;
+	margin: 10px auto 10px auto;
+}
 
+.left{
+	float:left;
+	text-align:right;
+	border-right:#FFF solid thin;
+	width: 290px;
+	padding-right: 50px;
+	font-style:italic;
+}
+
+.right{
+	padding-left: 50px;
+	float:left;
+	text-align:left;
+	width: 290px;
+}
 
 
 
